--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="StockOptionLayoutName">Envanter</string>
     <string name="RecipeBookOptionLayoutName">Tariflerim</string>
     <string name="AboutOptionLayoutName">Hakkımızda</string>
+    <string name="MalzemeEkle">Malzeme Ekle</string>
 
     <string name="tabFoodsText">Yemekler</string>
     <string name="tabFoodsAdd">Yemek Ekle</string>
